feat: edit cv markup

--- a/index.html
+++ b/index.html
@@ -3,9 +3,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CV Aleksey</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <main class="main-content">
+        <section class="left-section">
+            <img class="avatar" src="assets/img/avatar.png" alt="avatar">
+            <div class="contacts">
+                <h3>Contacts 01</h3>
+                <ul class="contact-info" style="list-style: none;">
+                    <li class="location">Location: Russian Federation</li>
+                    <li class="telephone">Tel: +71337451010</li>
+                    <li class="email">E-mail: xposed01@fakegithub.com</li>
+                    <li class="github">GitHub: github.com/xposed01</li>
+
+                </ul>
+            </div>
+        </section>
+
+
+
+
+
+            
+
+
+
+        <section class="right-section"> 
+            <h1>Aleksey Unknown</h1>
+            <h3>About 02</h3>
+            <p>Hi there, my name is Aleksey and I want to become a front-end developer.
+                I started learning HTML, CSS and JS.</p>
+
+        </section>
+    </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
+
 </html>
