feat: refactor code

--- a/index.html
+++ b/index.html
@@ -1,59 +1,99 @@
-<!DOCTYPE html>
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV Aleksey</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
-    <main class="main-content">
-        <section class="left-section">
-            <img class="avatar" src="assets/img/avatar.png" alt="avatar">
-            <div class="contacts">
-                <h3>Contacts 01</h3>
-                <ul class="contact-info" style="list-style: none;">
-                    <li class="location">Location: Russian Federation</li>
-                    <li class="telephone">Tel: +71337451010</li>
-                    <li class="email">E-mail: xposed01@fakegithub.com</li>
-                    <li class="github">GitHub: github.com/xposed01</li>
+  <body>
+    <header>
+      <nav class="main-navigation">
+        <ul class="navigation-list">
+          <li><a href="#contacts">Contacts</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">My Skills</a></li>
+          <li><a href="#education">Education</a></li>
+          <li><a href="#code">Code</a></li>
+          <li><a href="#projects">My projects</a></li>
+        </ul>
+      </nav>
+    </header>
 
-                </ul>
-            </div>
-        </section>
+    <main class="main-container">
+      <div class="main-profile">
+        <img src="/assets/img/avatar.png" alt="avatar" class="logo" />
+        <h1 class="profile">Aleksey Unknown, newbie web developer</h1>
+      </div>
 
+      <section class="contacts" id="contacts">
+        <h2 class="section-title">Contacts 01</h2>
+        <ul class="contacts-list">
+          <li>Location: Russian Federation</li>
+          <li>Tel: +71337451010</li>
+          <li>E-mail: xposed01@fakegithub.com</li>
+          <li>Github: github.com/xposed01</li>
+        </ul>
+      </section>
 
+      <section class="section-main" id="about">
+        <h2 class="section-title">About 02</h2>
+        <p>
+          Hi there, my name is Aleksey and I want to become a front-end
+          developer. I started learning HTML, CSS and JS.
+        </p>
+      </section>
 
+      <section class="section-main" id="skills">
+        <h2 class="section-title">My skills 03</h2>
+        <ul class="section-list">
+          <li>HTML, CSS3</li>
+          <li>Git, Github (in progress)</li>
+          <li>Adobe Photoshop</li>
+        </ul>
+      </section>
 
+      <section class="section-main" id="education">
+        <h2 class="section-title">Education and courses 04</h2>
+        <ol class="education-list">
+          <li>Higher Education: Advertising and PR</li>
+          <li>The Rolling Scopes School #stage0 (in progress)</li>
+        </ol>
+      </section>
 
-            
+      <section class="section-main">
+        <h2 class="section-title">Language 05</h2>
+        <p>Russian - Native <br />English - B1 (Pre-Intermediate)</p>
+      </section>
 
+      <section class="section-main" id="code">
+        <h2 class="section-title">Code example 06</h2>
+        <pre>
+              <code>
+                  &lt;!DOCTYPE html>
+                  &lt;html>
+                  &lt;body>
+                  &lt;script>alert( 'Hello, world!' );&lt;/script>
+                  &lt;/body>
+                  &lt;/html>
+              </code>
+         </pre>
+      </section>
 
-
-        <section class="right-section"> 
-            <h1>Aleksey Unknown</h1>
-            <h3>About 02</h3>
-            <p>Hi there, my name is Aleksey and I want to become a front-end developer.
-                I started learning HTML, CSS and JS.</p>
-
-        </section>
+      <section class="section-main" id="projects">
+        <h2 class="section-title">My Projects 07</h2>
+        <ul class="section-list">
+          <li>Nothing to see here :\</li>
+        </ul>
+      </section>
     </main>
 
+    <footer class="main-footer">
+      <p>2022</p>
+      <a href="githib.com/xposed01">xposed01</a>
+      <img src="" alt="rsschool" />
+    </footer>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
-
+  </body>
 </html>
