--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="html-page">
+<html lang="en" class="html-page">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -26,7 +26,7 @@
     <main class="main-container">
 
       <div class="main-profile">
-        <img src="/assets/img/avatar.png" width="300px" height="300px" alt="avatar" class="logo" />
+        <img src="/assets/img/avatar.png" width="300" height="300" alt="avatar" class="logo" />
         <h1 class="profile">Aleksey Unknown, newbie web developer</h1>
       </div>
 
@@ -53,7 +53,7 @@
         <h2 class="section-title">My skills</h2>
         <ul class="section-list">
           <li>HTML, CSS3</li>
-          <li>Git, Github <i>(in progress)</i></li></li>
+          <li>Git, Github <i>(in progress)</i></li>
           <li>Adobe Photoshop, Figma <i>(in progress)</i></li>
         </ul>
       </section>
@@ -62,7 +62,7 @@
         <h2 class="section-title">Education</h2>
         <ol class="education-list">
           <li>Higher Education: Advertising and PR</li>
-          <li>The Rolling Scopes School #stage0 (in progress)</li>
+          <li>The Rolling Scopes School #stage0 <i>(in progress)</i></li>
         </ol>
       </section>
 
@@ -74,7 +74,9 @@
       <section class="section-main" id="projects">
         <h2 class="section-title">My Projects</h2>
         <ul class="section-list">
-          <li>Nothing to see here :\</li>
+          <li><a href="https://github.com/xposed01/rsschool-cv/tree/gh-pages">rsschool-CV
+          </a></li>
+          <li>nothing to see here :\</li>
         </ul>
       </section>
 
@@ -94,7 +96,6 @@
          </pre>
       </section>
 
-      </section>
     </div>
     </main>
 
