--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main class="main-container">
 
       <div class="main-profile">
-        <img src="/assets/img/avatar.png" width="300" height="300" alt="avatar" class="logo" />
+        <img src="assets/img/avatar.png" width="300" height="300" alt="avatar" class="logo" />
         <h1 class="profile">Aleksey Unknown, newbie web developer</h1>
       </div>
 
