fix: about and contacts

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <div class="main-profile">
         <img src="assets/img/avatar.png" width="300" height="300" alt="avatar" class="logo" />
-        <h1 class="profile">Aleksey Unknown, newbie web developer</h1>
+        <h1 class="profile">Aleksey Unknown, web developer</h1>
       </div>
 
       <div class="main-wrapper">
@@ -35,8 +35,7 @@
         <h2 class="section-title">Contacts</h2>
         <ul class="contacts-list">
           <li><b>Location:</b> Russian Federation</li>
-          <li><b>Tel:</b> +71337451010</li>
-          <li><b>E-mail:</b> xposed01@fakemail.com</li>
+          <li><b>Discord</b> Nickel#1973</li>
           <li><b>Github:</b> <a href="https://github.com/xposed01">/xposed01</a></li>
         </ul>
       </section>
@@ -44,15 +43,17 @@
       <section class="section-main" id="about">
         <h2 class="section-title">About</h2>
         <p>
-          Hi there, my name is Aleksey and I want to become a front-end
-          developer. I started learning HTML, CSS and JS.
+          Hi there, my name is Aleksey and I want to become a front-end developer.
+          I do SMM and sometimes study design as a hobby.
+          In December 2021 i started learning <b>HTML</b>, <b>CSS</b> and <b>JS</b>.
+          In February 2022 I graduated from RS PRE-SCHOOL.
         </p>
       </section>
 
       <section class="section-main" id="skills">
         <h2 class="section-title">My skills</h2>
         <ul class="section-list">
-          <li>HTML, CSS3</li>
+          <li>HTML, CSS</li>
           <li>Git, Github <i>(in progress)</i></li>
           <li>Adobe Photoshop, Figma <i>(in progress)</i></li>
         </ul>
