fix: change edu and lang

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
       <section class="section-main" id="skills">
         <h2 class="section-title">My skills</h2>
         <ul class="section-list">
-          <li>HTML, CSS</li>
-          <li>Git, Github <i>(in progress)</i></li>
-          <li>Adobe Photoshop, Figma <i>(in progress)</i></li>
+          <li>HTML, CSS, JavaScript</li>
+          <li>Git, Github</li>
+          <li>Adobe Photoshop, Figma</li>
         </ul>
       </section>
 
@@ -63,13 +63,13 @@
         <h2 class="section-title">Education</h2>
         <ol class="education-list">
           <li>Higher Education: Advertising and PR</li>
-          <li>The Rolling Scopes School #stage0 <i>(in progress)</i></li>
+          <li>RS School. JS/FE Pre-School 2022</li>
         </ol>
       </section>
 
       <section class="section-main">
         <h2 class="section-title">Language</h2>
-        <p>Russian - Native <br />English - B1 (Pre-Intermediate)</p>
+        <p>Russian - Native <br />English - B1 (Pre-Intermediate) <br>JavaScript - A1 (Beginner)</p>
       </section>
 
       <section class="section-main" id="projects">
