feat: add projects

--- a/index.html
+++ b/index.html
@@ -75,9 +75,12 @@
       <section class="section-main" id="projects">
         <h2 class="section-title">My Projects</h2>
         <ul class="section-list">
-          <li><a href="https://github.com/xposed01/rsschool-cv/tree/gh-pages">rsschool-CV
+          <li><a href="https://xposed01.github.io/rs-stage0/portfolio/">Photography Portfolio
           </a></li>
-          <li>nothing to see here :\</li>
+          <li><a href="https://xposed01.github.io/rs-stage0/audio-player/">Audio Player
+          </a></li>
+          <li><a href="https://xposed01.github.io/rs-stage0/random-jokes/">Random Jokes
+          </a></li>
         </ul>
       </section>
 
@@ -85,6 +88,7 @@
         <h2 class="section-title">Code example</h2>
         <pre>
               <code>
+                
     &lt;!DOCTYPE html>
     &lt;html>
        &lt;body>
