docs: update portfolio

--- a/index.html
+++ b/index.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html lang="en" class="html-page">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CV Aleksey</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
 
-  <body class="body-page">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CV Aleksey</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-    <header>
-      <nav class="main-navigation">
-        <ul class="navigation-list">
-          <li><a href="#contacts">Contacts</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">My Skills</a></li>
-          <li><a href="#education">Education</a></li>
-          <li><a href="#code">Code</a></li>
-          <li><a href="#projects">My projects</a></li>
-        </ul>
-      </nav> 
-    </header>
+<body class="body-page">
 
-    <main class="main-container">
+  <header>
+    <nav class="main-navigation">
+      <ul class="navigation-list">
+        <li><a href="#contacts">Contacts</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">My Skills</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#code">Code</a></li>
+        <li><a href="#projects">My projects</a></li>
+      </ul>
+    </nav>
+  </header>
 
-      <div class="main-profile">
-        <img src="assets/img/avatar.png" width="300" height="300" alt="avatar" class="logo" />
-        <h1 class="profile">Aleksey Unknown, web developer</h1>
-      </div>
+  <main class="main-container">
 
-      <div class="main-wrapper">
+    <div class="main-profile">
+      <img src="assets/img/avatar.png" width="300" height="300" alt="avatar" class="logo" />
+      <h1 class="profile">Aleksey Unknown, web developer</h1>
+    </div>
+
+    <div class="main-wrapper">
       <section class="section-main contacts" id="contacts">
         <h2 class="section-title">Contacts</h2>
         <ul class="contacts-list">
@@ -69,18 +70,24 @@
 
       <section class="section-main">
         <h2 class="section-title">Language</h2>
-        <p>Russian - Native <br />English - B1 (Pre-Intermediate) <br>JavaScript - A1 (Beginner)</p>
+        <p>Russian - Native <br />English - B1 (Intermediate) <br>JavaScript - A2 (Pre-Intermediate)</p>
       </section>
 
       <section class="section-main" id="projects">
         <h2 class="section-title">My Projects</h2>
         <ul class="section-list">
+          <li><a href="https://rolling-scopes-school.github.io/xposed01-JSFE2022Q1/SHELTER/pages/main/">Pet Shelter
+          </a></li>
+          <li><a href="https://xposed01.github.io/virtual-keyboard/">Virtual Keyboard
+          </a></li>
+          <li><a href="https://xposed01.github.io/cssMemSlider/cssMemSlider/">CSS Meme Slider
+          </a></li>
           <li><a href="https://xposed01.github.io/rs-stage0/portfolio/">Photography Portfolio
-          </a></li>
+            </a></li>
           <li><a href="https://xposed01.github.io/rs-stage0/audio-player/">Audio Player
-          </a></li>
+            </a></li>
           <li><a href="https://xposed01.github.io/rs-stage0/random-jokes/">Random Jokes
-          </a></li>
+            </a></li>
         </ul>
       </section>
 
@@ -102,14 +109,15 @@
       </section>
 
     </div>
-    </main>
+  </main>
 
-    <footer class="main-footer">
-      <p class="footer-year">&copy; 2022</p>
-      <a href="https://github.com/xposed01" class="footer-git">xposed01</a>
-      <a href="https://rs.school/js/">
+  <footer class="main-footer">
+    <p class="footer-year">&copy; 2022</p>
+    <a href="https://github.com/xposed01" class="footer-git">xposed01</a>
+    <a href="https://rs.school/js/">
       <img src="assets/img/rss.svg" alt="rsschool" class="footer-rs"></a>
-    </footer>
+  </footer>
 
-  </body>
+</body>
+
 </html>
